fixed overflow and scrollbar

--- a/src/Sidebar.css
+++ b/src/Sidebar.css
@@ -34,3 +34,18 @@
   background: transparent;
   outline-width: 0;
 }
+
+.sidebar__chats {
+  overflow: scroll;
+}
+
+/* Hide scrollbar for Chrome, Safari, and Opera */
+.sidebar__chats::-webkit-scrollbar {
+  display: none;
+}
+
+/* Hide scrollbar for IE, Edge, and Firefox */
+.sidebar__chats {
+  -ms-overflow-style: none; /* IE and Edfe */
+  scrollbar-width: none; /* Firefox */
+}
